# git-whisper

./: .gitignore  Cargo.toml  README.md  pyproject.toml
git_whisper/: __init__.py  cli.py  generator.py
src/: generator.rs  main.rs
tests/: test_cli.py  test_generator.py
