[package]
name = "git-whisper"
version = "0.1.1"
edition = "2024"

[dependencies]
futures = "0.3.31"
futures-util = "0.3.31"
git2 = "0.20.2"
reqwest = { version = "0.12.19", features = ["json", "stream"] }
serde = { version = "1.0.219",  features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.45.1",  features = ["full"] }
